microservices/4-k8s/k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otus-app
  template:
    metadata:
      labels:
        app: otus-app
    spec:
      containers:
        - name: otus-app
          image: antropovivan/otus:microservices-otus-users
          command: ["/users-app"]
          ports:
            - name: otus-app
              containerPort: 3000
          volumeMounts:
            - name: app-env
              mountPath: /.env
              subPath: .env
      volumes:
        - name: app-env
          configMap:
            name: env-file
