microservices/4-k8s/k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-service
spec:
  selector:
    app: otus-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: otus-app
  type: NodePort
